@@ -1,6 +1,7 @@
 <b>2012-02-29</b>
 
 * Add ellipsis to truncated notes in flight list.
+* Make Class and Reason radio button names clickable to improve flight entry usability.
 
 <b>2012-12-28</b>
 
